{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 48,
  "lineage": "d3fbed50-b108-366c-e09e-dff7f3cf5b9b",
  "resources": [
    {
      "module": "module.hello_world_app",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114421837671:vpc/vpc-05850a5446982bcad",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d504a438e9691fd2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0a7efe12e309cfb5a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05850a5446982bcad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02f3b13308aa386fa",
            "owner_id": "114421837671",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.hello_world_app",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:targetgroup/hello-world-prod/cc5b9fcaa7928025",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:listener-rule/app/hello-world-prod/f48b7af9c778420e/822e04b41f370505/69a786dbdd867965",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:listener-rule/app/hello-world-prod/f48b7af9c778420e/822e04b41f370505/69a786dbdd867965",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:listener/app/hello-world-prod/f48b7af9c778420e/822e04b41f370505",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.aws_lb_target_group.asg",
            "module.hello_world_app.data.aws_subnets.default",
            "module.hello_world_app.data.aws_vpc.default",
            "module.hello_world_app.module.alb.aws_lb.example",
            "module.hello_world_app.module.alb.aws_lb_listener.http",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:targetgroup/hello-world-prod/cc5b9fcaa7928025",
            "arn_suffix": "targetgroup/hello-world-prod/cc5b9fcaa7928025",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:targetgroup/hello-world-prod/cc5b9fcaa7928025",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hello-world-prod",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05850a5446982bcad"
          },
          "dependencies": [
            "module.hello_world_app.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:loadbalancer/app/hello-world-prod/f48b7af9c778420e",
            "arn_suffix": "app/hello-world-prod/f48b7af9c778420e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hello-world-prod-109565836.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:loadbalancer/app/hello-world-prod/f48b7af9c778420e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hello-world-prod",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0555770b08a34d3b5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ac1f3387e048f1d"
              },
              {
                "subnet_id": "subnet-0b780e9ce6ceed4c7"
              },
              {
                "subnet_id": "subnet-0de06cd1e9b09e31d"
              }
            ],
            "subnets": [
              "subnet-07ac1f3387e048f1d",
              "subnet-0b780e9ce6ceed4c7",
              "subnet-0de06cd1e9b09e31d"
            ],
            "vpc_id": "vpc-05850a5446982bcad",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.hello_world_app.data.aws_subnets.default",
            "module.hello_world_app.data.aws_vpc.default",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:listener/app/hello-world-prod/f48b7af9c778420e/822e04b41f370505",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:listener/app/hello-world-prod/f48b7af9c778420e/822e04b41f370505",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:114421837671:loadbalancer/app/hello-world-prod/f48b7af9c778420e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.data.aws_subnets.default",
            "module.hello_world_app.data.aws_vpc.default",
            "module.hello_world_app.module.alb.aws_lb.example",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114421837671:security-group/sg-0555770b08a34d3b5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0555770b08a34d3b5",
            "ingress": [],
            "name": "hello-world-prod",
            "name_prefix": "",
            "owner_id": "114421837671",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05850a5446982bcad"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1237110214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0555770b08a34d3b5",
            "security_group_rule_id": "sgr-01f71fefe8b380f30",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-768926218",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0555770b08a34d3b5",
            "security_group_rule_id": "sgr-05b577221e388a5ae",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114421837671:security-group/sg-09ed3fe04c23c47ec",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09ed3fe04c23c47ec",
            "ingress": [],
            "name": "hello-world-prod-instance",
            "name_prefix": "",
            "owner_id": "114421837671",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05850a5446982bcad"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-861742177",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ed3fe04c23c47ec",
            "security_group_rule_id": "sgr-03bc5eb1daa2aebd9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.module.asg.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}